<resources>
    <string name="app_name">ToDo App</string>
    <string name="to_do_list">To Do List</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">Task Title</string>
    <string name="task_details">Task Details</string>
    <string name="add_new_task_title">Add new Task</string>
    <string name="add_new_task">Add New Task</string>
    <string name="add_task">Add Task</string>
    <string name="add">Add</string>
    <string name="please_enter_task_title">Please Enter Task Title</string>
    <string name="please_enter_task_description">Please Enter Task Description</string>
    <string name="select_time">Select Time</string>
    <string name="delete">Delete</string>
    <string name="edit_task">Edit Task</string>
    <string name="save_changes">Save Changes</string>
    <string name="mode">Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>


</resources>